[gd_scene load_steps=14 format=3 uid="uid://bfvb372sca8m2"]

[ext_resource type="Script" path="res://user-interface/control-node/FormatLabel.gd" id="1"]
[ext_resource type="StyleBox" uid="uid://bp6kfebep5pa7" path="res://user-interface/menu/theme/black-rounded.tres" id="1_0ikgq"]
[ext_resource type="FontFile" uid="uid://cc78r22h75c20" path="res://user-interface/resource/font/NotoSerif-Regular.ttf" id="1_7bb5e"]
[ext_resource type="Theme" uid="uid://blprm8j3o32j7" path="res://level/leveler/resource/score.tres" id="1_year7"]
[ext_resource type="Script" path="res://level/leveler/leveler.gd" id="4"]
[ext_resource type="Shortcut" uid="uid://cmfbyxixc4xv3" path="res://user-interface/resource/shortcut/escape.tres" id="4_amvrx"]
[ext_resource type="Script" path="res://user-interface/control-node/SFXButton.gd" id="5_seuyc"]
[ext_resource type="Script" path="res://level/leveler/hud.gd" id="6_jvtoq"]
[ext_resource type="Script" path="res://level/leveler/ping.gd" id="8_kft5c"]
[ext_resource type="Script" path="res://level/leveler/fps.gd" id="10"]
[ext_resource type="AudioStream" uid="uid://bykr1yaisabfe" path="res://autoload/SoundEffect/resource/tick-.wav" id="10_ykt54"]
[ext_resource type="Script" path="res://level/leveler/PauseMenu.gd" id="12"]

[sub_resource type="Theme" id="Theme_p2fhi"]
default_font = ExtResource("1_7bb5e")
default_font_size = 24
Button/styles/normal = ExtResource("1_0ikgq")
Label/styles/normal = null

[node name="level" type="Control"]
z_index = 4000
texture_filter = 4
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
theme = SubResource("Theme_p2fhi")
script = ExtResource("4")

[node name="PauseMenu" type="ColorRect" parent="."]
process_mode = 3
visible = false
custom_minimum_size = Vector2(540, 960)
layout_mode = 1
offset_right = 540.0
offset_bottom = 960.0
size_flags_vertical = 3
color = Color(0.129412, 0.129412, 0.129412, 0.423529)
script = ExtResource("12")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
process_mode = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -169.5
offset_top = -127.5
offset_right = 169.5
offset_bottom = 127.5
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
shortcut = ExtResource("4_amvrx")
text = "Resume"
script = ExtResource("5_seuyc")

[node name="Restart" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Quit")
focus_next = NodePath("../Quit")
focus_previous = NodePath(".")
text = "Restart"
script = ExtResource("5_seuyc")

[node name="Quit" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_previous = NodePath(".")
text = "Back to Menu"
script = ExtResource("5_seuyc")

[node name="hud" type="Panel" parent="." node_paths=PackedStringArray("hi_score_label", "bomb_label", "reward_sfx", "score_label")]
layout_mode = 1
offset_left = 20.0
offset_top = 852.0
offset_right = 520.0
offset_bottom = 960.0
size_flags_vertical = 8
mouse_filter = 2
theme = ExtResource("1_year7")
script = ExtResource("6_jvtoq")
hi_score_label = NodePath("VBoxContainer/HiScore")
bomb_label = NodePath("VBoxContainer/HBoxContainer/Bomb")
reward_sfx = NodePath("reward")
score_label = NodePath("VBoxContainer/Score")

[node name="VBoxContainer" type="VBoxContainer" parent="hud"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 4.0
offset_right = -18.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="hud/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Bomb" type="Label" parent="hud/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
text = "Bomb:	%d"
script = ExtResource("1")

[node name="ping" type="Label" parent="hud/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "%dms"
script = ExtResource("8_kft5c")

[node name="fps" type="Label" parent="hud/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "%d"
script = ExtResource("10")

[node name="Timer" type="Timer" parent="hud/VBoxContainer/HBoxContainer"]
autostart = true

[node name="HiScore" type="Label" parent="hud/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 5
text = "Hi-Score:  %018d"
script = ExtResource("1")

[node name="Score" type="Label" parent="hud/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 5
text = "Score:     %018d"
script = ExtResource("1")

[node name="pickup" type="AudioStreamPlayer" parent="hud"]
stream = ExtResource("10_ykt54")
bus = &"SFX"

[node name="reward" type="AudioStreamPlayer" parent="hud"]

[node name="pause" type="Button" parent="."]
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 1
offset_right = 64.0
offset_bottom = 65.0
shortcut = ExtResource("4_amvrx")
text = "||"

[connection signal="pressed" from="PauseMenu/VBoxContainer/Resume" to="PauseMenu" method="_on_Resume_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Restart" to="PauseMenu" method="_on_restart_pressed" flags=6]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Quit" to="PauseMenu" method="_on_Quit_pressed" flags=6]
[connection signal="timeout" from="hud/VBoxContainer/HBoxContainer/Timer" to="hud/VBoxContainer/HBoxContainer/ping" method="_on_timer_timeout"]
[connection signal="timeout" from="hud/VBoxContainer/HBoxContainer/Timer" to="hud/VBoxContainer/HBoxContainer/fps" method="_on_timer_timeout"]
[connection signal="pressed" from="pause" to="PauseMenu" method="_on_pause_pressed"]
